fixed overflow

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -31,3 +31,9 @@ a,
     padding: 0 2rem;
   }
 } */
+
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
